# framead

./: Cargo.toml  LICENSE_MIT
front-end-test/: next.config.mjs  package-lock.json  package.json
front-end-test/app/: layout.tsx  page.tsx
front-end-test/app/lib/: controls.ts  design.ts  materials.ts  setup_threejs.ts
front-end-test/app/lib/lengthgizmo/: lengthgizmo.d.ts  lengthgizmo.js
front-end-test/app/lib/viewportgizmo/utils/: constants.ts
front-end-test/public/: C-FMJ60-N-Meter-Low.stl  LCF8-4040-Meter-Low.stl  LCF8-4040.glb  LCF8-4040.stl
src/: assembly_node.rs  design.rs  lib.rs
src/component/: end_cap.rs  extrude.rs  extrude_connector.rs  floor.rs  mod.rs  panel.rs
src/design/: operation.rs
src/instance/: mod.rs
